apps/ingress/overlays/dev/bff.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff
spec:
  externalName: application.app-dev-bff.svc.cluster.local
