apps/ingress/overlays/dev/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  externalName: application.app-dev-frontend.svc.cluster.local
