apps/ingress/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: application
spec:
  rules:
  - http:
      paths:
      - path: /graphql
        backend:
          serviceName: bff
          servicePort: 4000
      - path: /
        backend:
          serviceName: frontend
          servicePort: 8080
